[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/941849650195996693.webp" type="Texture" id=1]
[ext_resource path="res://UI/943905319422136430.webp" type="Texture" id=2]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=3]
[ext_resource path="res://polices/Kenney Mini.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Screenshot_20221213-150021_Snapchat.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="conteneur_principal" type="VBoxContainer" parent="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -227.0
alignment = 1

[node name="title" type="Label" parent="TextureRect/conteneur_principal"]
margin_top = 53.0
margin_right = 180.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Adel Jump
(out the window)"
align = 1

[node name="choix_menu" type="HBoxContainer" parent="TextureRect/conteneur_principal"]
margin_top = 100.0
margin_right = 180.0
margin_bottom = 157.0
alignment = 1

[node name="Commencer" type="VBoxContainer" parent="TextureRect/conteneur_principal/choix_menu"]
margin_left = 49.0
margin_right = 96.0
margin_bottom = 57.0

[node name="commencer" type="Button" parent="TextureRect/conteneur_principal/choix_menu/Commencer"]
margin_right = 47.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 1 )
flat = true
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="TextureRect/conteneur_principal/choix_menu/Commencer"]
margin_top = 34.0
margin_right = 47.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 1, 0.0156863, 1 )
custom_fonts/font = SubResource( 3 )
text = "Commencer"
align = 1
valign = 1

[node name="Quitter" type="VBoxContainer" parent="TextureRect/conteneur_principal/choix_menu"]
margin_left = 100.0
margin_right = 130.0
margin_bottom = 57.0

[node name="quitter" type="Button" parent="TextureRect/conteneur_principal/choix_menu/Quitter"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="TextureRect/conteneur_principal/choix_menu/Quitter"]
margin_top = 34.0
margin_right = 30.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quitter
"
align = 1
valign = 1

[node name="meilleur_score" type="Label" parent="TextureRect/conteneur_principal"]
margin_top = 161.0
margin_right = 180.0
margin_bottom = 174.0
custom_colors/font_color = Color( 1, 0, 0.992157, 1 )
custom_fonts/font = SubResource( 2 )
text = "Meilleur score:"
align = 1

[connection signal="pressed" from="TextureRect/conteneur_principal/choix_menu/Commencer/commencer" to="." method="_on_commencer_pressed"]
[connection signal="pressed" from="TextureRect/conteneur_principal/choix_menu/Quitter/quitter" to="." method="_on_quitter_pressed"]
